--- a/nextjs-stylex-import/package.json
+++ b/nextjs-stylex-import/package.json
@@ -27,6 +27,7 @@
     "del-cli": "^5.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "prettier": "^3.1.1",
     "typescript": "^5"
   }
 }
